--- a/businessweb/blog/templates/blog/category.html
+++ b/businessweb/blog/templates/blog/category.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block content %}
-  {% for post in posts %}
+  {% for post in category.get_posts.all %}
     <section class="page-section cta">
       <div class="container">
         <div class="row">
